# aoc-2020

./: AOC.cabal  LICENSE  README.md  stack.yaml
src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs
